<resources>
    <string name="app_name" translatable="false">Compa</string>
    <string name="navigation_drawer_open">Abrir menú</string>
    <string name="navigation_drawer_close">Cerrar menú</string>
    <string name="action_settings">Ajustes</string>
    <string name="menu_profile">Perfil</string>
    <string name="menu_tasks">Tareas</string>
    <string name="menu_payments">Gastos</string>
    <string name="menu_checkout">Cerrar sesión</string>
    <string name="password">Contraseña</string>
    <string name="logout">Cerrar sesión</string>
    <string name="date_birth">Fecha de nacimiento</string>
    <string name="email">Correo electrónico</string>
    <string name="modify_information">Modificar información</string>
    <string name="signup">Registrarse</string>
    <string name="login">Iniciar sesión</string>
    <string name="my_tasks">Mis tareas</string>
    <string name="all_tasks">Todas</string>
    <string name="register">Registrarse</string>
    <string name="username">Nombre de usuario</string>
    <string name="name">Nombre</string>
    <string name="repeat_email">Repetir correo</string>
    <string name="repeat_password">Repetir contraseña</string>
    <string name="emails_are_different">Los correos electrónicos no coinciden</string>
    <string name="accept">Aceptar</string>
    <string name="check_fields">Revisa los campos</string>
    <string name="passwords_are_different">Las contraseñas no coinciden. Por favor, revisa estos campos</string>
    <string name="password_minor_eight_characters">La contraseña tiene menos de 8 caracteres. Por favor, introduce una contraseña que supere dicha cantidad</string>
    <string name="empty_field">El campo está vacío</string>
    <string name="surnames">Apellidos</string>
    <string name="data_saved">La información se ha guardado correctamente</string>
    <string name="save_info">Guardar información</string>
    <string name="title_activity_tasks" translatable="false">TasksActivity</string>
    <string name="delete_profile">Desactivar cuenta</string>
    <string name="name_task">Nombre de la tarea</string>
    <string name="start_date_task">Inicio</string>
    <string name="finish_date_task">Fin</string>
    <string name="category_task">Categoría de la tarea</string>
    <string name="description_task">Añade una descripción de la tarea</string>
    <string name="members_task" translatable="false">Fulanito, Menganito</string>
    <string name="members_task_info_subtitle">Para ello introduce sus nombres de usuario separados por coma. Puedes empezar por ti mismo</string>
    <string name="add_task_info_form">Rellena los recuadros con la información relacionada de la tarea que vas a crear</string>
    <string name="add_task">Añadir tarea</string>
    <string name="realize_payment">Registrar pago</string>
    <string name="take_payment">Registrar cobro</string>
    <string name="register_payment">Registrar pago</string>
    <string name="register_cobro">Registrar cobro</string>
    <string name="register_payment_or_solicitude">Registrar</string>
    <string name="pay_transmitter">Nombre de usuario del emisor</string>
    <string name="pay_receiver">Nombre de usuario del receptor</string>
    <string name="pay_date">Fecha</string>
    <string name="pay_price">Coste</string>
    <string name="pay_concept">Concepto</string>
    <string name="finished_task">Tarea finalizada</string>
    <string name="finished_task_message">¡Bien hecho, camarada! Continúa con tus tareas</string>
    <string name="oops">Vaya...</string>
    <string name="error_disabling_account">Ha ocurrido un error desactivando tu cuenta. Vuelve a intentarlo</string>
    <string name="sure">Qué casualidad</string>
    <string name="error_deleting_task">Ha surgido un error finalizando tu tarea. Eso es que no lo has hecho bien. Vuelve a intentarlo.</string>
    <string name="modified_task">Tarea modificada</string>
    <string name="modified_task_info">Por mucho que la retrases, no va a dejar de existir. ¡Hazla cuanto antes!</string>
    <string name="error_modifying_task">No se ha podido modificar la tarea. O te pones las pilas y la terminas o vuelves a intentarlo.</string>
    <string name="members_task_info">Añade los miembros que realizarán esta tarea</string>
    <string name="no_login">El correo o la contraseña no existen. Por favor, regístrate</string>
    <string name="register_payment_info">Se ha registrado el pago correctamente. Cada vez eres más pobre</string>
    <string name="dabuti">¡Estupendo!</string>
    <string name="register_cobro_info">Se ha registrado el cobro correctamente. Estás a nada de tener una fortuna</string>
    <string name="what_a_pitty">Qué desdicha</string>
    <string name="no_info_profile">No hay información disponible</string>
    <string name="are_you_sure_disable_account">¿Seguro que quieres desactivar tu cuenta?</string>
    <string name="cancel">Cancelar</string>
    <string name="disabled_account">Cuenta desactivada</string>
    <string name="disabled_account_info">Nos entristece mucho que te vayas. ¡Vuelve pronto!</string>
    <string name="come_back">Volveré, lo prometo</string>
    <string name="check_fields_info">No se ha podido actualizar la información. Por favor, comprueba que el campo o los campos se haya/n rellenados correctamente</string>
    <string name="new_task">Nueva tarea</string>
    <string name="new_task_info">La tarea se ha añadido correctamente. Hala, ya tienes más faena</string>
    <string name="register_user">Registro de usuario</string>
    <string name="register_successfully">Te has registrado correctamente</string>
    <string name="new_cobro">Nuevo cobro</string>
    <string name="new_cobro_info">Has cobrado un pago, ¡ve a verlo!</string>
    <string name="welcome">Bienvenido,</string>
    <string name="compa" translatable="false">COMPA</string>
    <string name="email_login" translatable="false">, no te mandaremos publicidad</string>
    <string name="password_login" translatable="false">, por favor no pongas el nombre de tu gato</string>
    <string name="let_met_log_in">Déjame entrar</string>
    <string name="i_have_not_account">No tengo cuenta</string>
    <string name="menu">MENÚ</string>
    <string name="menu_entertainment">Entretenimiento</string>
    <string name="menu_configuration">Ajustes</string>
    <string name="menu_exit">Me piro, vampiro</string>
    <string name="contacts_and_groups">Contactos y grupos</string>
    <string name="misif_1234" translatable="false">Misifú1234</string>
    <string name="incorrect_login_message">Inicio de sesión incorrecto</string>
    <string name="incorrect_data_login_message">O te has equivocado poniendo la contraseña o es que no te has registrado. Por favor, soluciona eso</string>
    <string name="okay_makey" translatable="false">Okay makey</string>
    <string name="title_activity_contacts_and_groups" translatable="false">ContactsAndGroupsActivity</string>
    <string name="next">Siguiente</string>
    <string name="previous">Anterior</string>
    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="update_birthdate_successfully">Has cambiado perfectamente tu fecha de nacimiento</string>
    <string name="something_was_wrong">Algo ha salido mal</string>
    <string name="something_was_wrong_message">Vaya, no se ha podido actualizar la información porque ha fallado algo</string>
    <string name="contacts">Contactos</string>
    <string name="and_groups">y grupos</string>
    <string name="loading_app">Cargando aplicación</string>
    <string name="name_group">Nombre del grupo</string>
    <string name="place_group_create">Lugar del desastre</string>
    <string name="data_group_label">Datos del grupo</string>
    <string name="members_group">Miembros del grupo</string>
    <string name="no_members_added">Aún no hay nadie invitado. ¿Piensas encargarte de todo tú o qué?</string>
    <string name="add_member_group_input_layout">Añade el correo del o la menda</string>
    <string name="add_member_button">Añade un compa</string>
    <string name="add">Añadir</string>
    <string name="group">Grupo</string>
    <string name="do_you_want_to_add_this_compa">¿Quieres añadir a este usuario como compañero de grupo? Piénsalo bien...</string>
    <string name="no_no_no">Ni de coña</string>
    <string name="add_group">Añadir grupo</string>
    <string name="do_you_want_to_add_group">¿Quieres juntarte con esta gente para hacer cosas?</string>
    <string name="meh">No me queda otra</string>
    <string name="groups">Grupos</string>
    <string name="menu_friends">Colegas</string>
    <string name="no_friends">No tienes amigos :(</string>
    <string name="search">Busca</string>
    <string name="delete_friend_successfully">Has eliminado a este usuario correctamente. Esperemos que no lo hagas muy a menudo...</string>
    <string name="delete_friend_title">Eliminar amigo</string>
    <string name="add_friend">Añadir amigo</string>
    <string name="do_you_want_to_add_this_friend">¿Estás seguro de que quieres añadir este usuario a tu lista de amigos?</string>
    <string name="are_you_sure_delete_friend">¿Estás seguro de eliminar este amigo de tu lista de amigos? :(</string>
    <string name="pending_friends">Amigos pendientes</string>
    <string name="no_pending_friends">No tienes peticiones de amistad pendientes</string>
    <string name="do_you_want_to_delete_friend">¿Deseas eliminar a este amigo?</string>
    <string name="select_friend">Selecciona a un amigo</string>
    <string name="do_you_want_to_delete_group">¿Quieres eliminar este grupo?</string>
    <string name="delete_group">Eliminar grupo</string>
    <string name="of_course_madafak">Que les den</string>
    <string name="task_data">Datos de la tarea</string>
    <string name="status">Estado</string>
    <string name="work_realized">Trabajo realizado</string>
    <string name="for_doing">Por hacer</string>
    <string name="in_process">En proceso</string>
    <string name="in_revision">En revisión</string>
    <string name="finished">Finalizado</string>
    <string name="no_info">Sin información</string>
    <string name="select_group">Selecciona grupo</string>
    <string name="historial">Historial</string>
    <string name="owe_me">Me deben</string>
    <string name="what_i_owe">Debo</string>
    <string name="pay_debt">Pagar deuda</string>
    <string name="collect_payment">Cobrar pago</string>
    <string name="paid">Pagado</string>
    <string name="unpaid">Sin pagar</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="payment_detail">Detalle del pago</string>
    <string name="mark_as_paid">Marcado como pagado</string>
    <string name="who_pay">¿A quién quieres pagar?</string>
    <string name="do_you_want_to_add_this_payment">¿Estás seguro de añadir este pago?</string>
    <string name="who_collect">¿A quién quieres cobrar?</string>
    <string name="do_you_want_to_add_this_collection">¿Estás seguro de añadir este cobro?</string>
    <string name="pay">Pagar</string>
    <string name="collect">Cobrar</string>
    <string name="mark_as_unpaid">Marcar como impagado</string>
    <string name="cleanliness">Limpieza</string>
    <string name="buying">Compra</string>
    <string name="trash">Basura</string>
    <string name="washing">Fregar</string>
    <string name="kitchen">Cocinar</string>
    <string name="iron">Planchar</string>
    <string name="select_category">Selecciona categoría</string>
    <string name="personal_data">Información personal</string>
    <string name="access_data">Información de acceso</string>
    <string name="phone">Teléfono (con prefijo)</string>
    <string name="search_friends">Buscar amigos</string>
    <string name="all">Todo</string>
    <string name="filter_by">"Filtrar por: "</string>
</resources>