<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6F5F5"
    tools:context=".ui.tasks.AddTaskActivity">

    <Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:navigationIcon="@drawable/ic_arrow_back_red_24"
        android:title="Añadir una nueva tarea"
        android:titleTextAppearance="@style/TextAppearance.AppCompat.Medium"
        android:titleTextColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginTop="16dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="16dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="24dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/add_task_info_form"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp" />

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:id="@+id/add_task_name_task"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="16dp"
                        app:boxCornerRadiusTopStart="16dp"
                        app:boxStrokeColor="@color/colorOnPrimary">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/add_task_name_task_edit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/colorPrimary"
                            android:hint="@string/name_task"
                            android:paddingVertical="12dp"
                            android:textColor="#4C4B4B"
                            android:textColorHint="#4E4D4D"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/add_task_start_date"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="4dp"
                        app:boxStrokeColor="@color/colorPrimary">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/add_task_start_date_edit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/start_date_task"
                            android:paddingVertical="12dp"
                            android:textColor="#4C4B4B"
                            android:textColorHint="#4E4D4D"
                            android:backgroundTint="@color/colorPrimary"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/add_task_finish_date"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="4dp"
                        app:boxStrokeColor="@color/colorPrimary">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/add_task_finish_date_edit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/finish_date_task"
                            android:paddingVertical="12dp"
                            android:textColor="#4C4B4B"
                            android:textColorHint="#4E4D4D"
                            android:backgroundTint="@color/colorPrimary" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/add_task_category"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="4dp"
                        app:boxStrokeColor="@color/colorPrimary">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/add_task_category_edit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/category_task"
                            android:paddingVertical="12dp"
                            android:textColor="#4C4B4B"
                            android:textColorHint="#4E4D4D"
                            android:backgroundTint="@color/colorPrimary" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/add_task_description"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="4dp"
                        app:boxCornerRadiusBottomEnd="16dp"
                        app:boxStrokeColor="@color/colorPrimary">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/add_task_description_edit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/description_task"
                            android:paddingVertical="12dp"
                            android:textColor="#4C4B4B"
                            android:textColorHint="#4E4D4D"
                            android:backgroundTint="@color/colorPrimary"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="@string/members_task_info"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/members_task_info_subtitle"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/add_task_members"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="8dp"
                        app:boxCornerRadiusBottomEnd="8dp"
                        app:boxCornerRadiusBottomStart="8dp"
                        app:boxCornerRadiusTopEnd="8dp"
                        app:boxCornerRadiusTopStart="8dp"
                        app:boxStrokeColor="@color/colorPrimary">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/add_task_members_edit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/members_task"
                            android:paddingVertical="12dp"
                            android:textColor="#4C4B4B"
                            android:textColorHint="#4E4D4D"
                            android:backgroundTint="@color/colorPrimary" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/add_task_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/add_task"
                        android:textColor="@android:color/white"
                        android:backgroundTint="@color/colorPrimary"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/materialCardView2" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </RelativeLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>